# monetdb-graph

./: .gitignore  Makefile  Makefile.in  common.mk.in  configure.ac
build-aux/m4/: monetdb.m4  monetdb_arg_enable.m4  monetdb_pkgconfig.m4  monetdb_prog_monetdb.m4  monetdb_set_cc_flag.m4  pkg_custom.m4
mal/: autoload.mal  graph.mal
scripts/: generate_random_queries.rb  output.txt
src/: algorithms.hpp  bat_handle.cpp  bat_handle.hpp  bat_handle.hpp.bck  common.h  compact_graph.hpp  configuration.cpp  configuration.hpp  debug.cpp  debug.h  errorhandling.cpp  errorhandling.hpp  graph.hpp  graph_descriptor.cpp  graph_descriptor.hpp  joiner.cpp  joiner.hpp  miscellaneous.c  monetdb_config.hpp  parse_request.cpp  parse_request.hpp  prepare.cpp  prepare.hpp  preprocess.c  query.cpp  query.hpp  radixheap.hpp  spfw.cpp  spfw.cpp.bck
src/algorithm/: algorithms.hpp  sequential_dijkstra.hpp
src/algorithm/sequential/dijkstra/: dijkstra.cpp  dijkstra.hpp  dijkstra_impl.hpp  fifo.hpp  queue.hpp  radixheap.hpp
src/queue/: fifo.hpp  queue.hpp  radixheap.hpp
tests/: connected.malC  helloworld.malC  helloworld_par2.malC  helloworld_par4.malC  helloworld_seq.malC  sample.malC  slicer.malC
